fix dark theme on mobile

--- a/components/Wrapper/Wrapper.module.css
+++ b/components/Wrapper/Wrapper.module.css
@@ -53,7 +53,8 @@
   @media screen and (max-width: 840px) {
     .wrapper{
         display: block;
-        width: 350px;
+        min-width: 360px;
+        width: 360px;
         min-height: 100vh;
         height: 100%;
     }
